# virtual_uart

./: CMakeLists.txt  compile_flags.txt  main.c  uart_rx.pio  uart_tx.pio
